--- a/9.1/Dockerfile
+++ b/9.1/Dockerfile
@@ -1,24 +1,28 @@
-FROM quay.io/baselibrary/ubuntu:14.04
+FROM baselibrary/baseimage:1.0.0
 MAINTAINER ShawnMa <qsma@thoughtworks.com>
 
-## Add repository
+## Version
+ENV POSTGRES_MAJOR   9.1
+ENV POSTGRES_VERSION 2.1.8+dfsg-5~97.git43a09cc.pgdg14.04+1
+
+## Repository
 RUN \
   apt-key adv --keyserver keyserver.ubuntu.com --recv-keys ACCC4CF8 &&\
   echo "deb http://apt.postgresql.org/pub/repos/apt trusty-pgdg main" > /etc/apt/sources.list.d/postgres.list
 
-## Install packages
+## Packages
 RUN \
   apt-get update &&\
-  apt-get install -y postgresql-9.1-postgis-2.1 postgresql-contrib-9.1 python-psycopg2 &&\
+  apt-get install -y postgresql-9.1-postgis-2.1=$POSTGRES_VERSION postgresql-contrib-9.1 python-psycopg2 &&\
   rm -rf /var/lib/apt/lists/*
 
-## Install scripts
-ADD docker-entrypoint.sh /docker-entrypoint.sh
-RUN chmod a+x            /docker-entrypoint.sh
-
-## Set environment variable
+## Environments
 ENV PATH   /usr/lib/postgresql/9.1/bin:$PATH
 ENV PGDATA /var/lib/postgresql/data
+
+## Scripts
+ADD docker-entrypoint.sh /docker-entrypoint.sh
+RUN chmod a+x            /docker-entrypoint.sh
 
 EXPOSE 5432
 
